Changed the name of the title of the video

--- a/Js video bg/index.html
+++ b/Js video bg/index.html
@@ -14,7 +14,7 @@
         <source src="Combat gods.mp4">
     </video>
     <div class="text-container">
-        <h1>One Piece Ep 1016</h1>
+        <h1>Combat Gods Ep 1</h1>
         <div class="btn-container">
             <button class="btn pause" data-id="pause">
                 <img src="pause.png" alt="">
